<resources>
    <string name="app_name">ilCarro</string>
    <string name="title_activity_user_control">User control</string>

    <string name="button_text_next">Next</string>
    <string name="button_text_previous">Previous</string>
    <string name="button_text_submit">Submit</string>
    <string name="button_text_plus">+</string>

    <string name="error_message">Error while downloading the data\nPress retry to try again</string>
    <string name="retry_button_text">RETRY</string>

    <string name="menu_title_search">Search</string>
    <string name="menu_title_let_the_car_work">Let the car work</string>
    <string name="menu_title_profile">My profile</string>
    <string name="menu_title_favorites">Favorites</string>
    <string name="menu_title_terms_of_use">Terms of use</string>
    <string name="menu_title_logout">Logout</string>

    <string name="profile_top_text">About you</string>
    <string name="profile_edit_info_button_text">Edit info</string>
    <string name="profile_try_it_now_button_text">Try it now!</string>
    <string name="profile_log_out_button_text">Logout</string>
    <string name="profile_own_cars_text">Your cars</string>
    <string name="profile_no_cars_text">You have no cars here yet\nAdd one!</string>
    <string name="profile_rent_car_text_head">Want to rent your car?</string>
    <string name="profile_rent_car_text_body">You can add your car to our website and start earning. You’ll earn up to 90% of the trip price.</string>

    <string name="get_started_welcome_text">Let\'s get started!</string>
    <string name="to_sign_up_button_text">Sign up</string>
    <string name="to_log_in_button_text">Log in</string>

    <string name="logout_confirmation_text">Are you sure you want to log out?</string>

    <string name="log_in_text">Log in</string>
    <string name="log_in_text_bottom">Type your data and hit Yalla!</string>
    <string name="log_in_email_hint">Email</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_forgot_pass_text">Forgot your password?</string>
    <string name="log_in_forgot_pass_link"><a href="https://google.ru">Click here.</a></string>

    <string name="register_first_name_hint">First name</string>
    <string name="register_last_name_hint">Last name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_name_hint">Password</string>
    <string name="register_agree_text">I agree with <a href="https://google.ru">Terms of Use </a> and <a href="https://google.ru"> Privacy Policy.</a></string>

    <string name="yalla_button_text">Y\'alla!</string>

    <string name="sign_up_text">Registration</string>

    <string name="find_form_text_main">Find Your Car Now!</string>
    <string name="find_form_text_below">Type your data and hit Yalla!</string>
    <string name="find_form_location_hint_text">Location</string>
    <string name="find_form_from_hint_text">From</string>
    <string name="find_form_till_hint_text">Till</string>

    <string name="most_popular_choices">MOST POPULAR CHOICES\nIN YOUR AREA</string>

    <string name="price_additional_text">\u20AA\\day</string>
    <string name="title_activity_maps">Map</string>

    <string name="let_the_car_work_title">Let the car work</string>
    <string name="let_the_car_work_text">You can add your car to our website and start earning. You’ll earn 65% to 85% of the trip price, depending on the vehicle protection package you choose. If you have commercial rental insurance to cover you, your car, and your customers and would like to waive vehicle protection you earn 90% of the trip price.</string>
    <string name="let_the_car_work_country_hint_text">Country</string>
    <string name="let_the_car_work_city_hint_text">City</string>
    <string name="let_the_car_work_street_hint_text">Street</string>
    <string name="let_the_car_work_ZIP_hint_text">ZIP (optional)</string>
    <string name="let_the_car_work_make_hint_text">Make</string>
    <string name="let_the_car_work_model_hint_text">Model</string>
    <string name="let_the_car_work_year_hint_text">Year</string>
    <string name="let_the_car_work_engine_hint_text">Engine</string>
    <string name="let_the_car_work_fuel_hint_text">Fuel</string>
    <string name="let_the_car_work_transmission_hint_text">Transmission</string>
    <string name="let_the_car_work_WD_hint_text">Wheels drive</string>
    <string name="let_the_car_work_horse_power_hint_text">Horse power</string>
    <string name="let_the_car_work_torque_hint_text">Torque (N*m)</string>
    <string name="let_the_car_work_fuel_consumption_hint_text">Fuel consumption (L/100 km)</string>
    <string name="let_the_car_work_distance_included_hint_text">Distance included (km)</string>
    <string name="let_the_car_work_doors_hint_text">Doors</string>
    <string name="let_the_car_work_seats_hint_text">Seats</string>
    <string name="let_the_car_work_class_hint_text">Class</string>
    <string name="let_the_car_work_about_hint_text">About (max 500 characters)</string>
    <string name="let_the_car_work_price_hint_text">Price</string>
    <string name="let_the_car_work_feature_hint_text">Feature</string>

</resources>