<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/logged_in">

        <item
            android:id="@+id/letTheCarWorkFragment"
            android:title="@string/menu_title_let_the_car_work" />

        <item android:id="@+id/profileFragment"
            android:title="@string/menu_title_profile" />

        <item
            android:id="@+id/termsOfUseFragment"
            android:title="@string/menu_title_terms_of_use" />

    </group>

    <group
        android:id="@+id/logged_out">

        <item
            android:id="@+id/userControlActivity"
            android:title="@string/get_started_welcome_text" />

        <item
            android:id="@+id/favoritesFragment"
            android:title="@string/menu_title_favorites" />
    </group>
</menu>