<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.ilcarro.ui.fragments.mainFlow.HomeFragment"
        android:label="@string/menu_title_let_the_car_work"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.ilcarro.ui.fragments.mainFlow.SearchFragment"
        android:label="@string/menu_title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.ilcarro.ui.fragments.mainFlow.FavoritesFragment"
        android:label="@string/menu_title_favorites"
        tools:layout="@layout/fragment_favorites"/>

    <activity
        android:id="@+id/userControlActivity"
        android:name="com.example.ilcarro.ui.activities.UserActivity"
        android:label="activity_user_control"
        tools:layout="@layout/activity_user" />

    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.ilcarro.ui.fragments.mainFlow.MapsFragment"
        android:label="MapsFragment"
        tools:layout="@layout/fragment_maps"/>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.ilcarro.ui.fragments.mainFlow.ProfileFragment"
        android:label="ProfileFragment"
        tools:layout="@layout/fragment_profile"/>

</navigation>